Able to add chatroom

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <div id="rooms">
         Room:
         <select>
+          <input type="text" name="addRoom" id="addRoom"/>
         </select>
         <button>Add Room</button>
       </div>
